--- a/.github/workflows/downloader.yml
+++ b/.github/workflows/downloader.yml
@@ -28,35 +28,35 @@ jobs:
         #you-get -o ./you_get/ -O 2 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=2'
         #you-get -o ./you_get/ -O 3 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=3'
         #sleep 1m
-        #you-get -o ./you_get/ -O 4 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=4'
+        you-get -o ./you_get/ -O 4 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=4'
         #you-get -o ./you_get/ -O 5 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=5'
         
         #sleep 1m
         
         #you-get -o ./you_get/ -O 6 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=6'
-        you-get -o ./you_get/ -O 7 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=7'
-        you-get -o ./you_get/ -O 8 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=8'
-        sleep 1m
-        you-get -o ./you_get/ -O 9 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=9'
-        you-get -o ./you_get/ -O 10 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=10'
+        #you-get -o ./you_get/ -O 7 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=7'
+        #you-get -o ./you_get/ -O 8 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=8'
+        #sleep 1m
+        #you-get -o ./you_get/ -O 9 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=9'
+        #you-get -o ./you_get/ -O 10 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=10'
         
-        sleep 1m
+        #sleep 1m
         
-        you-get -o ./you_get/ -O 11 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=11'
-        you-get -o ./you_get/ -O 12 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=12'
-        you-get -o ./you_get/ -O 13 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=13'
-        sleep 1m
-        you-get -o ./you_get/ -O 14 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=14'
-        you-get -o ./you_get/ -O 15 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=15'
+        #you-get -o ./you_get/ -O 11 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=11'
+        #you-get -o ./you_get/ -O 12 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=12'
+        #you-get -o ./you_get/ -O 13 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=13'
+        #sleep 1m
+        #you-get -o ./you_get/ -O 14 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=14'
+        #you-get -o ./you_get/ -O 15 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=15'
         
-        sleep 1m
+        #sleep 1m
         
-        you-get -o ./you_get/ -O 16 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=16'
-        you-get -o ./you_get/ -O 17 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=17'
-        you-get -o ./you_get/ -O 18 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=18'
-        sleep 1m
-        you-get -o ./you_get/ -O 19 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=19'
-        you-get -o ./you_get/ -O 20 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=20'
+        #you-get -o ./you_get/ -O 16 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=16'
+        #you-get -o ./you_get/ -O 17 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=17'
+        #you-get -o ./you_get/ -O 18 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=18'
+        #sleep 1m
+        #you-get -o ./you_get/ -O 19 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=19'
+        #you-get -o ./you_get/ -O 20 --debug 'https://www.bilibili.com/video/BV1tT4y1u7sW?p=20'
         
         ls
         echo '============================================='
